@@ -1,0 +1,20 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/cosine.R
+\name{cosine}
+\alias{cosine}
+\title{Cosine Similarity}
+\usage{
+cosine(data)
+}
+\arguments{
+\item{data}{A binarized dataset of verbal fluency or linguistic data}
+}
+\value{
+A cosine similarity matrix
+}
+\description{
+Computes cosine similarity
+}
+\author{
+Alexander Christensen <alexpaulchristensen@gmail.com>
+}
